tests/semantic/fail/illegal_pointer_comparision3.c
int main(void) {
  int *i;
  char *j;
  if (&i < &j) {
    return 0;
  }
  return 1;
}
